# Copyright (C) 2004, 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id: Makefile.am 759 2006-07-07 03:07:08Z andreasw $

# Authors:  Carl Laird, Andreas Waechter     IBM    2004-08-13

AUTOMAKE_OPTIONS = foreign

SUBDIRS = CUTErInterface

if COIN_HAS_ASL
  SUBDIRS += AmplSolver
#  SUBDIRS += CompositeInterface
endif
